--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-    "token": "ODk0MDQ4MjAxNTI5NzYxODQy.G63ilw.5M94brkFqsLbQK2KccjZxzYRUJGAdQr4kqZbJ0"
+    "token": "ODk0MDQ4MjAxNTI5NzYxODQy.G63ilw.5M94brkFqsLbQK2KccjZxzYRUJGAdQr4kqZbJ0",
+    "clientId": "894048201529761842",
+    "guildId": "892459602745102338"
 }
